# raytron

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  rustfmt.toml
core/: Cargo.toml
core/src/: aabb.rs  color.rs  lib.rs  math.rs  mesh.rs  polygon.rs  sphere.rs  texture.rs  traits.rs
core/src/bsdf/: cooktorrance.rs  diffuse.rs  mod.rs  phong.rs
core/src/renderer/: dbgraycaster.rs  mod.rs  pathtracer.rs
core/src/scenehandler/: kdtree.rs  mod.rs  shapelist.rs
core/src/utils/: consts.rs
examples/: common.rs  envmap.rs  materials.rs  spheres.rs
examples/apptest/: apptest.rs
examples/spheres/: spheres.rs
examples/test/: camera.rs  consts.rs  debug_140.glslf  debug_140.glslv  imgui_gfx_renderer.rs  main.rs
examples/test_rt/: main.rs  test.rs
pt/: Cargo.toml
pt/src/: aabb.rs  color.rs  lib.rs  math.rs  mesh.rs  polygon.rs  sphere.rs  texture.rs  traits.rs
pt/src/bsdf/: cooktorrance.rs  diffuse.rs  mod.rs  phong.rs
pt/src/renderer/: dbgraycaster.rs  mod.rs  pathtracer.rs
pt/src/scenehandler/: kdtree.rs  mod.rs  shapelist.rs
pt/src/sceneholder/: kdtree.rs  mod.rs  shapelist.rs
pt/src/utils/: consts.rs  mod.rs
src/: camera_controller.rs  fpscamera.rs  lib.rs
src/pt/: Cargo.toml
src/pt/src/: color.rs  lib.rs  math.rs  mesh.rs  polygon.rs  sphere.rs  traits.rs
src/pt/src/bsdf/: diffuse.rs
src/pt/src/material/: diffuse.rs  mod.rs  phong.rs
src/pt/src/renderer/: dbgraycaster.rs  mod.rs  pathtracer.rs
src/pt/src/sceneholder/: kdtree.rs  mod.rs  shapelist.rs
src/pt/src/utils/: consts.rs  mod.rs
src/scenes/: mod.rs  spheres.rs
src/shaders/: default2d_140.glslf  default2d_140.glslv  default_120.glslf  default_120.glslv
