[package]
name = "app"
version = "0.1.0"
authors = ["Alexey Terekhov"]

[lib]
name = "pt_app"

[dependencies]

gfx_core = { git = 'https://github.com/gfx-rs/gfx' }
gfx_device_gl = { git = 'https://github.com/gfx-rs/gfx' }
gfx_window_glutin = { git = 'https://github.com/gfx-rs/gfx' }
gfx = { git = 'https://github.com/gfx-rs/gfx' }

glutin = "*"
image = "*"
nalgebra = "0.10.*"
obj-rs = "*"
pathtracer = {path = "pt", version = "*"}
time = "0.1.*"
rand = "*"
tobj = "*"

clippy = {version = "*", optional = true}


[features]
clippy_check = ["clippy", "pathtracer/clippy_check"]
default = []

# [profile.release]
# opt-level = 3
# debug = false
# lto = true
# debug-assertions = false


#[[example]]
#name = "apptest"
#path = "examples/apptest/apptest.rs"

[[example]]
name = "spheres"
path = "examples/spheres.rs"

[[example]]
name = "envmap"
path = "examples/envmap.rs"

[[example]]
name = "materials"
path = "examples/materials.rs"


[workspace]

