[package]
name = "raytron"
version = "0.1.0"
authors = ["Alexey Terekhov <alexey.terekhovv@yandex.ru>"]
license = "MIT/Apache-2.0"
description = " "
keywords = ["path-tracer", "3D"]
readme = "README.md"
homepage = "https://github.com/a1xt/raytron"
repository = "https://github.com/a1xt/raytron"

[lib]
name = "raytron"

[dependencies]

gfx_core = { git = 'https://github.com/gfx-rs/gfx' }
gfx_device_gl = { git = 'https://github.com/gfx-rs/gfx' }
gfx_window_glutin = { git = 'https://github.com/gfx-rs/gfx' }
gfx = { git = 'https://github.com/gfx-rs/gfx' }

glutin = "*"
image = "*"
nalgebra = "0.10.*"
obj-rs = "*"
raytron-core = {path = "core", version = "*"}
time = "0.1.*"
rand = "*"
tobj = "*"

clippy = {version = "*", optional = true}


[features]
clippy_check = ["clippy", "raytron-core/clippy_check"]
default = []

# [profile.release]
# opt-level = 3
# debug = false
# lto = true
# debug-assertions = false

[[example]]
name = "spheres"
path = "examples/spheres.rs"

[[example]]
name = "envmap"
path = "examples/envmap.rs"

[[example]]
name = "materials"
path = "examples/materials.rs"


[workspace]

