[package]
name = "raytron-core"
version = "0.1.0"
authors = ["Alexey Terekhov <alexey.terekhovv@yandex.ru>"]
license = "MIT/Apache-2.0"

[lib]
name = "raytron_core"
path = "src/lib.rs"

[dependencies]
nalgebra = "0.10.*"
num = "*"
rand = "*"
scoped_threadpool =  {version = "0.1.*", git = "https://github.com/Kimundi/scoped-threadpool-rs"}

clippy = {version = "*", optional = true}


[features]
clippy_check = ["clippy"]
default = []